Spielereien mit Tailwind

--- a/src/jsMain/resources/index.html
+++ b/src/jsMain/resources/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
 </head>
-<body id="target">
+<body id="target" class="bg-red-100">
 Loading...
-<script src="fritz2-tailwind-template.js"></script>
+<script src="fritz2tailwind.js"></script>
 </body>
 </html>
